# constructionverse

construction_vr_platform/: Cargo.toml
construction_vr_platform/crates/bim/: Cargo.toml
construction_vr_platform/crates/collaboration/: Cargo.toml
construction_vr_platform/crates/desktop-client/: Cargo.toml
construction_vr_platform/crates/vr-client/: Cargo.toml
construction_vr_platform/sql/: bim-management.sql  identity-and-access.sql  idx.sql  project-management.sql  vr-experience.sql
construction_vr_platform/sql/Identity-and-access/: companies.sql
diagrammes/: bim-iot-schedule-relationships.puml  bim-management.puml  collaboration-relationships.puml  composants-diagramme.puml  diagramme-global.puml  identity-and-access.puml  iot-management.puml  iot_alert-task_creation-sequence.puml  project-management.puml  scheduling-management.puml  system-architecture.puml  vr-collaborative-session.puml  vr-experience.puml
documentation/: project-files-structure.md  regles-gestions.md
tracker_react/: package-lock.json  package.json
tracker_react/src/: App.jsx
tracker_react/src/components/: ConstructionVRTracker.jsx  Tracker-v1.jsx  Tracker-v2.jsx  enhanced-implementation-tracker.jsx  implementation-tracker.jsx
tracker_react/src/styles/: enhanced-tracker-styles.css  tracker-styles.css
