[package]
name = "construction_vr_platform"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/engine",
    "crates/core",
    "crates/bim",
    "crates/collaboration",
    "crates/api-server",
    "crates/desktop-client",
    "crates/vr-client",
]

[workspace.dependencies]
# Rendu & Graphics
wgpu = "0.19"
winit = "0.29"
pollster = "0.3"

# Physique
rapier3D = "0.18"
nalgebra = "0.32"
parry3d = "0.13"

# BIM
# A integrer si disponible, sinon parser custom simplifié
ifc-rs = "0.1"

# Base de données
sled = "0.34"
rocksdb = "0.21"
bincode = "1.3"


# Réseau & API
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
hyper = "1.1"


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1" # MessagePack pour binaire compact


# Utilitaires
uuid = { version = "1.6", features = ["v4", "serde" ] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"


# Async & Concurrency
rayon = "1.8"
crossbeam = "0.8"
flume = "0.11"


# Compression & Encoding
lz4 = "1.24"
zstd = "0.13"
base64 = "0.21"